Changing top text on top nav

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
     <header class="header-area header-style-1 header-height-2">
         <div class="mobile-promotion">
-            <span>Grand opening, <strong>up to 15%</strong> off all items. Only <strong>3 days</strong> left</span>
+            <span>Shop all of your <strong>stationery needs.</strong> </span>
         </div>
         <div class="header-top header-top-ptb-1 d-none d-lg-block">
             <div class="container">
