--- a/index.html
+++ b/index.html
@@ -1122,14 +1122,16 @@
                             </div>
                             <ul class="contact-infor">
                                 <li><img src="assets/imgs/theme/icons/icon-location.svg" alt="" /><strong>Address:
-                                    </strong> <span>Upanga, Dar es salaam</span>
+                                    </strong> <span>Zanaki/Kisutu, Dar es salaam</span>
                                 </li>
                                 <li><img src="assets/imgs/theme/icons/icon-contact.svg" alt="" /><strong>Call
-                                        Us:</strong><span>(+255) 784 760 249</span></li>
+                                        Us:</strong><span>+255 697 148 670</span></li>
+                                        <li><img src="assets/imgs/theme/icons/icon-clock.svg" alt="" /><strong>Hours:</strong><span>09:00am - 05:00, Mon -
+                                                Fri</span></li>
                                 <li><img src="assets/imgs/theme/icons/icon-email-2.svg"
-                                        alt="" /><strong>Email:</strong><span>sale@saiashnaessentials.com</span></li>
-                                <li><img src="assets/imgs/theme/icons/icon-clock.svg"
-                                        alt="" /><strong>Hours:</strong><span>10:00 - 18:00, Mon - Sat</span></li>
+                                        alt="" /><strong>Email:</strong><span>sales@saiashnaessentials.com</span></li>
+                                        <li><img src="assets/imgs/theme/icons/icon-clock.svg" alt="" /><strong>Hours:</strong><span>09:00am - 01:00, Sat</span></li>
+                                
                             </ul>
                         </div>
                     </div>
