Adding changes to the address

--- a/index.html
+++ b/index.html
@@ -1118,20 +1118,21 @@
                         <div class="widget-about font-md mb-md-3 mb-lg-3 mb-xl-0">
                             <div class="logo mb-30">
                                 <a href="index.html" class="mb-15"><img src="assets/imgs/sailogo.png" alt="logo" /></a>
-                                <p class="font-lg text-heading">Stationery Shop based in Upanga, Dar es salaam. </p>
+                                <p class="font-lg text-heading"> Stationery Shop Based in the heart of Dar es Salaam. </p>
                             </div>
                             <ul class="contact-infor">
                                 <li><img src="assets/imgs/theme/icons/icon-location.svg" alt="" /><strong>Address:
                                     </strong> <span>Zanaki/Kisutu, Dar es salaam</span>
                                 </li>
+                                <li><img src="assets/imgs/theme/icons/icon-email-2.svg"
+                                        alt="" /><strong>Email:</strong><span>sales@saiashnaessentials.com</span></li>
                                 <li><img src="assets/imgs/theme/icons/icon-contact.svg" alt="" /><strong>Call
                                         Us:</strong><span>+255 697 148 670</span></li>
                                         <li><img src="assets/imgs/theme/icons/icon-clock.svg" alt="" /><strong>Hours:</strong><span>09:00am - 05:00, Mon -
                                                 Fri</span></li>
-                                <li><img src="assets/imgs/theme/icons/icon-email-2.svg"
-                                        alt="" /><strong>Email:</strong><span>sales@saiashnaessentials.com</span></li>
                                         <li><img src="assets/imgs/theme/icons/icon-clock.svg" alt="" /><strong>Hours:</strong><span>09:00am - 01:00, Sat</span></li>
-                                
+<li><img src="assets/imgs/theme/icons/icon-clock.svg" alt="" /><strong>Sundays & Holidays Closed:</strong><span></span>
+</li>
                             </ul>
                         </div>
                     </div>
